--- a/aula014/style.css
+++ b/aula014/style.css
@@ -8,17 +8,21 @@ header {
 section {
     background-color: aliceblue;
     width: 500px;
-    height: 300px;
     border-radius: 15px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.384);
     margin: auto;
+    padding: 15px;
+    max-height: 800px;
 }
 div {
     text-align: center;
     padding: 15px;
 }
+div#res {
+    max-height: 400px;
+    text-align: center;
+}
 footer {
     color: aliceblue;
     text-align: center;
-
 }
